--- a/film_review/review/templates/review/base.html
+++ b/film_review/review/templates/review/base.html
@@ -14,6 +14,9 @@
     {% endblock %}
     <footer>
         <ul>
+            <li><a
+                    href="https://docs.google.com/document/d/1wDrSYsp2wlzsgkMV4Oa0ytnkGyf88cKkWEed7CEuVfE/edit?usp=sharing">Отчет
+                    о проделанной работе</a></li>
             <li><a href="https://colab.research.google.com/drive/1KfwcpGIvEjpl6045xMFXlaxSzM6ZlX9E?usp=sharing"
                     target="_blank">Notebook
                     модели</a></li>
